# crwal_data_analyzation

./: .gitignore  1_single_soldout_ids.txt  2_option_soldout_ids.txt  3_successful_ids.txt  4_statistics.txt  5_price_changed.txt  CLAUDE.md  Makefile  README.md  analyze_results.py  cloudflare.html  crawler.py  excel_processor.py  extracted_ids_for_excel.txt  generate_delete_excel.py  generate_update_excel.py  main.py  main_crawler.py  one_time_restore_partial_soldout.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
tests/: conftest.py  test_crawler.py  test_excel_processor.py  test_main_crawler.py
tests/test_data/: __init__.py  sample_qoo10_data.py
