[project]
name = "marketfit-test"
version = "0.1.0"
description = "Olive Young product crawler"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # 의존성은 requirements.txt에서 관리
    # uv pip install -r requirements.txt 사용
]

[project.optional-dependencies]
# 개발용 의존성
dev = [
    "ruff>=0.1.0",
    "black>=23.0.0", 
    "mypy>=1.7.0",
    "isort>=5.12.0"
]

# 문서화 의존성
docs = [
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0"
]
