[project]
name = "marketfit-test"
version = "0.1.0"
description = "Olive Young product crawler"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
    "openpyxl>=3.1.5",
    "playwright>=1.40.0",
    "aiofiles>=23.2.1",
    "tqdm>=4.66.1",
    "asyncio-throttle>=1.0.1",
]

[project.optional-dependencies]
# 개발용 의존성
dev = [
    "ruff>=0.1.0",
    "black>=23.0.0", 
    "mypy>=1.7.0",
    "isort>=5.12.0"
]

# 문서화 의존성
docs = [
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0"
]
